# rs-postgres

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
src/: database.rs  frames.rs  main.rs  utils.rs
src/data/: icons.rs  mod.rs  scripts.rs  structs.rs  translates.rs
src/frames/: debug.rs  mod.rs  widgets.rs
