[package]
name = "rs-postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.31.1"
eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["all_loaders"] }

syntect = "5.2"

image = "0.25.5"

tokio = { version = "1.44.1", features = ["full"] }
dirs = "6.0.0"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

sqlx = { version = "0.8.3", features = ["runtime-async-std", "postgres", "chrono", "json"] }
sqlx-postgres = "0.8.3"

log = "0.4.26"
simple_logger = "5.0.0"

chrono = "0.4.40"

indexmap = "2.8.0"

[package.metadata.winresource]
icon = ["assets/icon.ico"]
